<resources>
    <string name="app_name">Maps1</string>
    <string name="title_activity_main_maps">Доставка</string>
    <string name="title_activity_login">Доставка</string>
    <string name="title_activity_rules">Правила</string>
    <string name="title_activity_schedule">График</string>
    <string name="title_activity_statistics">Статистика</string>
    <string name="title_activity_settings">Настройки</string>

    <string name="title_activity_order_details">Детали заказа</string>

    <string name="action_orders">Заказы</string>
    <string name="action_settings">Настройки</string>
    <string name="action_statistics">Статистика</string>
    <string name="action_rules">Правила</string>
    <string name="action_schedule">График</string>
    <string name="action_exit">Выйти</string>

    <string name="google_api_key">todo input google_api_key here</string>

    <string name="content_rules">Участник Общества – лицо, владеющее долей в его уставном капитале.
2.2.       Участниками Общества могут быть любые физические и юридические лица, которые в установленном законодательством РФ и настоящим Уставом порядке приобрели долю в уставном капитале Общества, за исключением тех лиц, для которых законодательством РФ установлено ограничение или запрещение на участие в хозяйственных Обществах.
2.3.       Число участников Общества не должно быть более пятидесяти. Если число участников превысит установленный предел, Общество подлежит преобразованию в акционерное общество в течение одного года.
2.4.       Общество обеспечивает в соответствии с требованиями Закона ведение и хранение списка участников Общества с указанием сведений о каждом участнике Общества, размере его доли в уставном капитале Общества и ее оплате, а также о размере долей, принадлежащих Обществу, датах их перехода к Обществу или приобретения Обществом.
    </string>

    <string name="toast_unhandled_ex">Ошибка программы</string>
    <string name="location_updated">%1$s: обновлены координаты</string>

    <!--UI todo move here all ui captions-->
    <string name="btnCall_caption">Позвонить оператору</string>
    <string name="btnSendLogs_caption">Отправить логи</string>
    <string name="btnBack_caption">--</string>

    <string name="activity_defaultLogin">Yuri</string>
    <string name="activity_defaultPassword">pass</string>
</resources>
