<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainMapsActivity">

    <item
        android:id="@+id/action_orders"
        android:orderInCategory="100"
        android:title="@string/action_orders"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_statistics"
        android:orderInCategory="300"
        android:title="@string/action_statistics"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rules"
        android:orderInCategory="400"
        android:title="@string/action_rules"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_schedule"
        android:orderInCategory="500"
        android:title="@string/action_schedule"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="600"
        android:title="@string/action_exit"
        app:showAsAction="never" />

</menu>